--- a/index.html
+++ b/index.html
@@ -81,6 +81,39 @@
             <!-- CTA: primary style (dark) -->
             <button class="download-button primary">Get Pro</button>
         </div>
+
+        <!-- Card 3: Enterprise tier (contact) -->
+        <div class="card">
+            <div class="card-top">
+                <h3 class="card-title">Enterprise</h3>
+                <p class="card-price">
+                    <span class="card-price-amount">Contact us</span>
+                </p>
+                <div class="card-content">
+                    <p class="includes-text">Everything in Pro, plus:</p>
+                    <ul class="features-list">
+                        <li>
+                            <span class="checkmark">✓</span>
+                            Dedicated support
+                        </li>
+                        <li>
+                            <span class="checkmark">✓</span>
+                            SSO & SAML
+                        </li>
+                        <li>
+                            <span class="checkmark">✓</span>
+                            Custom integrations
+                        </li>
+                        <li>
+                            <span class="checkmark">✓</span>
+                            Usage-based billing
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- CTA: primary style (dark) -->
+            <button class="download-button primary">Contact sales</button>
+        </div>
     </div>
 </body>
 </html>
