--- a/index.html
+++ b/index.html
@@ -69,6 +69,37 @@
             </div>
             <button class="download-button primary">Get Pro</button>
         </div>
+        <div class="card">
+            <div class="card-top">
+                <h3 class="card-title">Enterprise</h3>
+                <p class="card-price">
+                    <span class="card-price-amount">$50</span>
+                    <span class="card-price-period">/mo.</span>
+                </p>
+                <div class="card-content">
+                    <p class="includes-text">Everything in Pro, plus:</p>
+                    <ul class="features-list">
+                        <li>
+                            <span class="checkmark">✓</span>
+                            Cookies
+                        </li>
+                        <li>
+                            <span class="checkmark">✓</span>
+                            Other things
+                        </li>
+                        <li>
+                            <span class="checkmark">✓</span>
+                            Puppies
+                        </li>
+                        <li>
+                            <span class="checkmark">✓</span>
+                            Business stuff
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <button class="download-button primary">Get Enterprise</button>
+        </div>
     </div>
 </body>
 </html>
